Fixed background image on mobile version

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,18 @@
-html {
-  background-color: rgba(224, 231, 255, 1);
-  background-image: url(./images/pattern-background-mobile.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 0px -500px;
-}
-
 html,
 body {
   font-family: 'Red Hat Display', sans-serif;
+  height: 99%;
+}
+
+body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  background-image: url(./images/pattern-background-mobile.svg);
+  background-color: rgba(224, 231, 255, 1);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-attachment: local;
 }
 
 .card {
@@ -144,7 +144,7 @@ body {
 }
 
 @media (min-width: 1440px) {
-  html{
+  body {
     background-image: url(./images/pattern-background-desktop.svg);
   }
 }
